Update: mdに項目追加

--- a/src/pages/works/01.md
+++ b/src/pages/works/01.md
@@ -1,6 +1,23 @@
 ---
-title: "タイピングゲーム"
-date: "2017-08-21"
+title: 'タイピングゲーム'
+tags:
+  [
+    {
+      'name': 'TypeScript',
+      'color': '#294e80'
+    },
+    {
+      'name': 'webpack',
+      'color': '#1a6bac'
+    },
+    {
+      'name': 'SCSS',
+      'color': '#c16d97'
+    }
+  ]
+list_image: '/img/works/img_work_05.png'
+detail_image: '/img/works/img_work_05.png'
+link: 'https://github.com/harutete/typing-game'
 ---
 
 TypeScriptでタイピングゲームを作成しました。
