--- a/src/pages/works/01.md
+++ b/src/pages/works/01.md
@@ -15,8 +15,8 @@ tags:
       'color': '#c16d97'
     }
   ]
-list_image: '/img/works/img_work_05.png'
-detail_image: '/img/works/img_work_05.png'
+featuredImage: '../../images/works/img_work_05.png'
+# detail_image: '/image/works/img_work_05.png'
 link: 'https://github.com/harutete/typing-game'
 ---
 
