--- a/src/pages/works/04.md
+++ b/src/pages/works/04.md
@@ -19,4 +19,4 @@ featuredImage: '../../images/works/img_work_04.png'
 link: 'https://github.com/harutete/touch-game'
 ---
 
-お客さんのリクエストに合わせて具材を選択し、ラーメンを完成させるゲーム
+お客さんのリクエストに合わせて具材を選択し、ラーメンを完成させるゲームを作成しました。
