--- a/src/pages/works/06.md
+++ b/src/pages/works/06.md
@@ -15,4 +15,4 @@ featuredImage: '../../images/works/img_work_06.png'
 link: ''
 ---
 
-今日1日の頑張ったことを入力すると猫が褒めてくれるwebアプリ
+今日1日の頑張ったことを入力すると猫が褒めてくれるwebアプリを作成しました。
