Add: それぞれの実績の画像をアップ

--- a/src/pages/works/02.md
+++ b/src/pages/works/02.md
@@ -5,6 +5,10 @@ tags:
     {
       "name": "Nuxt.js",
       "color": "#00c58e"
+    },
+    {
+      "name": "TypeScript",
+      "color": "#294e80"
     }
   ]
 featuredImage: '../../images/works/img_work_02.png'
