--- a/src/pages/works/05.md
+++ b/src/pages/works/05.md
@@ -16,7 +16,7 @@ tags:
     }
   ]
 featuredImage: '../../images/works/img_work_05.png'
-link: ''
+link: 'https://github.com/harutete/nuxt-todo-app'
 ---
 
 Nuxt.jsとFirebaseでTODOアプリを作成しました。
