--- a/src/pages/works/06.md
+++ b/src/pages/works/06.md
@@ -12,7 +12,7 @@ tags:
     }
   ]
 featuredImage: '../../images/works/img_work_06.png'
-link: ''
+link: 'https://github.com/harutete/praise-cat'
 ---
 
 今日1日の頑張ったことを入力すると猫が褒めてくれるwebアプリを作成しました。
